# MMDet3d-CenterPoint

./: CMakeLists.txt  README.md  bootstrap.yaml
centerpoint/: centerpoint.cc  common.h  postprocess.cu  postprocess.h
cfgs/: centerpoint_pillar02_secfpn.yaml
data/: boxes.txt
model/: pfe.onnx  pfe.trt  pfe_fp16.trt
tools/: viewer.py  viewer1.py
